<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewTrackerName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:text="@string/label_tracker_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextTrackerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:ems="10"
            android:hint="@string/label_tracker_name" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/string_array_stop_types" />

    <TextView
        android:id="@+id/endLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_color_picker"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/help_timer_stop_manual"
        android:text="@string/label_tracker_stop_manual" />

    <TextView
        android:id="@+id/SBDdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_create_system_pref_here"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:onClick="updateTracker"
        android:text="@string/button_OK" />

</LinearLayout>