<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rowTClocksSummary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="5dp" >

    <TextView
        android:id="@+id/detailStartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:text="@string/label_start_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/clockDetailStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/detailEndLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight=".1"
        android:gravity="left"
        android:text="@string/label_stop_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/clockDetailEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>